Fix overflowing message content

--- a/resources/assets/less/bem/beatmap-discussion-post.less
+++ b/resources/assets/less/bem/beatmap-discussion-post.less
@@ -197,7 +197,7 @@
 
   &__message {
     .content-font();
-    word-wrap: break-word;
+    word-break: break-word;
     margin-bottom: 10px;
     color: white;
 
